--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,9 @@
 
 	color: black;
 
-	background-image: url("/media/mountain_banner.jpg");
-	filter: blur(3px);
-	-webkit-filter: blur(3px);
+	background-image: url("/media/banner.jpg");
+	/*filter: blur(3px);
+	-webkit-filter: blur(3px);*/
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -20,7 +20,7 @@
 	height: 20vh;
 	min-height: 100px;
 	border: 3px solid #FFFFFF;
-	top: 50%;
+	top: 30%;
 	left: 50%;
 	transform: translate(-50%,-50%);
 
@@ -28,7 +28,7 @@
 	line-height: max(5vh, 30px);
 	text-align: center;
 	color: white;
-	background-color: rgba(0,0,0,0.3);
+	background-color: rgba(0,0,0,0.7);
 	font-weight: bold;
 }
 
@@ -58,24 +58,35 @@
 	background-color: #F1F1F1;
 }
 
+.block_img_wrapper {
+	position: relative;
+	width: 100%;
+	height: 100px;
+}
+
 .block_img {
 	position: absolute;
-	left: 20%;
+	left: 50%;
+	top: 50%;
 
-	transform: translate(-50%, 0);
+	transform: translate(-50%, -50%);
+	z-index: 1;
 
 	display: block;
 	margin: auto;
-	width: 100px;
-	height: 100px;
-	object-fit: cover;
+	width: auto;
+	max-width: 80px;
+	height: 80%;
+	object-fit: contain;
 }
 
 .img_overlay {
+	position: relative;
 	display: block;
+	z-index: 2;
 
-	width: 75px;
-	height: 75px;
+	width: auto;
+	height: 100%;
 	object-fit: cover;
 	margin: 20px auto;
 }
