Updating stats study sheet

--- a/educational/math/statistics/study_guide/styles.css
+++ b/educational/math/statistics/study_guide/styles.css
@@ -4,3 +4,29 @@ a.anchor {
     top: -10vh;
     visibility: hidden;
 }
+
+#info {
+    width: 50%;
+    min-width: 500px;
+    height: 100%;
+    margin: auto;
+    padding: 10px;
+    padding-top: 20px;
+    position: relative;
+}
+
+#info h1 {
+    font-size: 30px;
+}
+
+#info h2 {
+    font-size: 22px;
+}
+
+#info p {
+    text-indent: 0px;
+}
+
+#info ul {
+    padding-left: 30px;
+}
